# mangarr

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ci  Justfile  Makefile  README.md  check-json.sh  compose.dev.yaml  compose.repo.yaml  compose.verify.yaml  compose.yaml
server/: .gitignore  extract_repo_changes.py  pyproject.toml
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 000_initial_schema.py  001_drop_user_api_key_hash.py  4f1a9b6c7d82_download_task_attempt_lineage.py  5f3c2a1b7e9d_download_profile_watch_variants.py  6b7f1d2e4c90_library_local_cover_path.py  8d1f3a7c9b42_drop_legacy_libgroup_urls.py  9c6e2f4a7b31_add_explore_title_details_cache.py  a5d6c9e72f01_hybrid_discover_library.py  aa7f3c9e4d11_library_chapter_reader_progress.py  b223ac982e55_.py  b8f1d4e7c2a0_seed_default_library_collections.py  bb9a1c2d3e44_library_chapter_comments.py  c7d4e8a1f2b3_library_collections_statuses_and_prefs.py  d4e1f6a2b8c0_downloads_monitor_queue.py  e1b6c4d2a9f8_library_preferred_variant_id.py  e3f9a1c62c7f_add_users_auth_schema.py  f2a4c8b1d9e3_download_profile_variant_ids.py  f58a6bc9d210_split_sessions_and_integration_api_keys.py
server/app/: config.py  main.py
server/app/bridge/: __init__.py  connection.py  logging.py  metrics.py  process.py  service.py  tasks.py
server/app/core/: cache.py  database.py  deps.py  errors.py  logging.py  scheduler.py  security.py  storage.py  utils.py  ws.py
server/app/domain/: chapter_matching.py  download_profiles.py  title_identity.py
server/app/models/: __init__.py  cache.py  titles.py  (+9 more)
(+554 files in other folders)
